package br.inatel.dm110.interfaces;

import br.inatel.dm110.dto.AuditDTO;

public interface AuditBeanLocal
{
	public void create(AuditDTO auditDTO);
}
