@startuml

top to bottom direction





package "beans" {
	class beans.AuditBean {
		{field} -em : jakarta.persistence.EntityManager
		{field} ~log : java.util.logging.Logger
		{method} +create ( paramAuditDTO1 : dto.AuditDTO ) : void
	}


	class beans.CustomerBean {
		{field} -em : jakarta.persistence.EntityManager
		{method} +create ( paramCustomerDTO1 : dto.CustomerDTO ) : void
		{method} +findAll () : java.util.List
		{method} +findByCpf ( paramString1 : String ) : dto.CustomerDTO
		{method} +updateCustomer ( paramString1 : String , paramCustomerDTO2 : dto.CustomerDTO ) : boolean
	}
}

package "beans.mdb" {
	class beans.mdb.AuditQueueMDB {
		{field} ~log : java.util.logging.Logger
		{method} +onMessage ( paramMessage1 : jakarta.jms.Message ) : void
	}


	class beans.mdb.AuditSenderBean {
		{field} -connectionFactory : jakarta.jms.ConnectionFactory
		{field} ~log : java.util.logging.Logger
		{field} -queue : jakarta.jms.Queue
		{method} +sendTextMessage ( paramString1 : String ) : void
	}
}

package "interfaces" {
	interface interfaces.AuditBeanLocal {
		{method}  {abstract} +create ( paramAuditDTO1 : dto.AuditDTO ) : void
	}


	interface interfaces.CustomerBeanLocal {
		{method}  {abstract} +create ( paramCustomerDTO1 : dto.CustomerDTO ) : void
		{method}  {abstract} +findAll () : java.util.List
		{method}  {abstract} +findByCpf ( paramString1 : String ) : dto.CustomerDTO
		{method}  {abstract} +updateCustomer ( paramString1 : String , paramCustomerDTO2 : dto.CustomerDTO ) : boolean
	}
}

package "dto" {
	class dto.AuditDTO {
		{field} +operation : String
		{field} +registerCode : String
		{field} {static} -serialVersionUID : long
		{method} +toString () : String
	}
	
	
	class dto.CustomerDTO {
		{field} +birthdate : java.time.LocalDate
		{field} +cep : String
		{field} +cpf : String
		{field} +email : String
		{field} +gender : String
		{field} +name : String
		{field} {static} -serialVersionUID : long
		{method} +toString () : String
	}
}

package "entities" {
	class entities.Audit {
		{field} {static} +OPERATION_CREATE : String
		{field} {static} +OPERATION_UPDATE : String
		{field} +identifier : Integer
		{field} +operation : String
		{field} +registerCode : String
		{field} +timestamp : java.util.Date
		{method} #onCreate () : void
	}

	class entities.Customer {
		{field} +birthdate : java.time.LocalDate
		{field} +cep : String
		{field} +cpf : String
		{field} +email : String
		{field} +gender : String
		{field} +name : String
		{method} #canEqual ( paramObject1 : Object ) : boolean
		{method} +equals ( paramObject1 : Object ) : boolean
		{method} +hashCode () : int
		{method} +toString () : String
	}
}

package "support" {
	class support.AuditConverter {
		{method}  {static} +toEntity ( paramAuditDTO1 : dto.AuditDTO ) : entities.Audit
	}


	class support.CustomerConverter {
		{method}  {static} +toDTO ( paramCustomer1 : entities.Customer ) : dto.CustomerDTO
		{method}  {static} +toDTOList ( paramList1 : java.util.List ) : java.util.List
		{method}  {static} +toEntity ( paramCustomerDTO1 : dto.CustomerDTO ) : entities.Customer
		{method}  {static} +toEntityList ( paramList1 : java.util.List ) : java.util.List
	}
	
	class support.LoggerProducer {
		{method} +getLogger ( paramInjectionPoint1 : jakarta.enterprise.inject.spi.InjectionPoint ) : java.util.logging.Logger
	}
}

package "impl" {
	class impl.CustomerResource {
		{method} +createCustomer ( paramCustomerDTO1 : dto.CustomerDTO ) : jakarta.ws.rs.core.Response
		{method} +getCustomer ( paramString1 : String ) : jakarta.ws.rs.core.Response
		{method} +listCustomers () : jakarta.ws.rs.core.Response
		{method} +updateCustomer ( paramString1 : String , paramCustomerDTO2 : dto.CustomerDTO ) : jakarta.ws.rs.core.Response
	}
}

package "impl" {
	class rest.RestApplication {
		{method} +getClasses () : java.util.Set
	}
}

beans.AuditBean ..|>  interfaces.AuditBeanLocal
beans.CustomerBean -->  beans.mdb.AuditSenderBean : auditSenderBean
beans.CustomerBean ..|>  interfaces.CustomerBeanLocal
beans.mdb.AuditQueueMDB -->  interfaces.AuditBeanLocal : auditBean



@enduml